--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
         <div class="form">
             <input type="text" placeholder="Enter text or URL">
             <button>Generator QR Code</button>
+
+            <div class="btn">
+                <button id="downloadImg">DOWNLOAD QR CODE</button>
+            </div>
         </div>
 
         <div class="qr-code">
-            <img src="" alt="">
+            <img src="" alt="" id="imageToDownload">
         </div>
     </div>
 
